Add/delete/print show

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <body>
     <form>
       Television show to add</br>
-      <input type="text" id="television-name-search">
+      <input type="text" id="search-field">
     </form>
-    <button type="button" id="search-btn">Search</button>
+    <button type="button" id="add-to-library-btn">Add to my library</button></br>
+    <button type="button" id="print-library-btn">Print my library</button></br>
+    <button type="button" id="delete-show-btn">Delete from my library</button></br>
+    Summary</br>
+    <div id="summary"></div>
 
     <script>
       require('./app.js')
