--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <title>TV Checker</title>
     <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css"
   </head>
   <body>
 
     <div class="form-group">
-      <label class="control-label" for="focusedInput">Show</label>
+      <label class="control-label" for="focusedInput">TV Tracker</label>
       <input class="form-control" id="search-field" type="text" placeholder="Enter a show">
     </div>
 
@@ -15,63 +16,49 @@
     <a href="#" class="btn btn-default" id="add-to-library-btn">Add to my library</a>
     <a href="#" class="btn btn-default" id="print-library-btn">Print my library</a>
     <a href="#" class="btn btn-default" id="delete-show-btn">Delete from my library</a>
-    <h1> Summary</br></h1>
+    <h1> My TV Shows</br></h1>
     <div id="summary"></div>
 
-    <table class="table table-striped table-hover ">
+    <table class="table table-striped table-hover " id="tv-show-table">
   <thead>
     <tr>
-      <th>#</th>
-      <th>Column heading</th>
-      <th>Column heading</th>
-      <th>Column heading</th>
+      <th>Name</th>
+      <th>Summary</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="tv-show-table-body">
+  </tbody>
+  <!-- <tbody>
     <tr>
       <td>1</td>
-      <td>Column content</td>
-      <td>Column content</td>
       <td>Column content</td>
     </tr>
     <tr>
       <td>2</td>
       <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
     </tr>
     <tr class="info">
       <td>3</td>
-      <td>Column content</td>
-      <td>Column content</td>
       <td>Column content</td>
     </tr>
     <tr class="success">
       <td>4</td>
       <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
     </tr>
     <tr class="danger">
       <td>5</td>
-      <td>Column content</td>
-      <td>Column content</td>
       <td>Column content</td>
     </tr>
     <tr class="warning">
       <td>6</td>
       <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
     </tr>
     <tr class="active">
       <td>7</td>
       <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
     </tr>
-  </tbody>
-</table> 
+  </tbody> -->
+</table>
 
     <script>
       require('./app.js')
